# machine-readable-regulations

./: .gitignore  README.md  build_ui.py  example_datapoints.csv  example_datapoints.json  extract_rules.py  gen_datapoints_file.py  ingest.py  match.py  matches.json  payload.json  pyproject.toml  rules.json  rules_engine.py
.claude/: launch.json
bank_returns/: bank_A_return.csv  bank_B_return.csv
ui/: template.html
ui-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui-app/src/: App.tsx  data.ts  design.css  engine.ts  main.tsx  store.tsx  types.ts
ui-app/src/components/: ui.tsx
ui-app/src/views/: BanksView.tsx  DatapointsView.tsx  HomeView.css  HomeView.tsx  MappingView.css  MappingView.tsx  OverviewView.tsx  PipelineFlow.css  PipelineFlow.tsx  RegisterView.css  RegisterView.tsx  RegulationsView.css  RegulationsView.tsx  RulesView.css  RulesView.tsx  VerdictsView.css  VerdictsView.tsx
